# PDF-edit-metadata

./: .gitignore  Readme.md  pdf-meta-editor-gui.py  pyproject.toml  setup.py
