[project]
name = "pdf-edit-metadata"
version = "0.1.0"
description = "Batch edit Title, Author, and Initial View for PDF files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cx-freeze>=8.4.0",
    "pymupdf>=1.27.2.3",
    "pyside6>=6.9.2",
]

[tool.cxfreeze]
executables = [
    { script = "pdf-meta-editor-gui.py", base = "gui", target_name = "PDFBatchMetadataEditor.exe" },
]

[tool.cxfreeze.build_exe]
packages = [
    "os",
    "sys",
    "re",
    "fitz",
    "PySide6",
    "PySide6.QtCore",
    "PySide6.QtGui",
    "PySide6.QtWidgets",
]
includes = [
    "fitz",
    "PySide6.QtCore",
    "PySide6.QtGui",
    "PySide6.QtWidgets",
]
excludes = [
    "tkinter",
    "PySide6.Qt3DAnimation",
    "PySide6.Qt3DCore",
    "PySide6.Qt3DExtras",
    "PySide6.Qt3DInput",
    "PySide6.Qt3DLogic",
    "PySide6.Qt3DRender",
    "PySide6.QtCharts",
    "PySide6.QtConcurrent",
    "PySide6.QtDataVisualization",
    "PySide6.QtGraphs",
    "PySide6.QtMultimedia",
    "PySide6.QtMultimediaWidgets",
    "PySide6.QtNetworkAuth",
    "PySide6.QtOpenGL",
    "PySide6.QtOpenGLWidgets",
    "PySide6.QtPositioning",
    "PySide6.QtQml",
    "PySide6.QtQmlModels",
    "PySide6.QtQuick",
    "PySide6.QtQuick3D",
    "PySide6.QtQuickControls2",
    "PySide6.QtQuickWidgets",
    "PySide6.QtRemoteObjects",
    "PySide6.QtSensors",
    "PySide6.QtSerialPort",
    "PySide6.QtStateMachine",
    "PySide6.QtTextToSpeech",
    "PySide6.QtVirtualKeyboard",
    "PySide6.QtWebChannel",
    "PySide6.QtWebEngine",
    "PySide6.QtWebEngineCore",
    "PySide6.QtWebEngineQuick",
    "PySide6.QtWebEngineWidgets",
    "PySide6.QtWebSockets",
    "PySide6.QtWebView",
    "PySide6.QtXml",
    "PySide6.QtXmlPatterns",
    "setuptools",
    "wheel",
    "importlib_metadata",
    "backports",
    "zipp",
]
bin_excludes = [
    "Qt6WebEngineCore.dll",
    "Qt6WebEngine.dll",
    "Qt6WebEngineWidgets.dll",
    "QtPdf.dll",
    "QtPdfQuick.dll",
]
include_msvcr = true
build_exe = "build/PDFBatchMetadataEditor"

[tool.cxfreeze.bdist_msi]
upgrade_code = "{f81d4fae-7dec-11d0-a765-00a0c91e6bf6}"
add_to_path = false
all_users = false
initial_target_dir = "[ProgramFilesFolder]\\PDF Batch Metadata Editor"
output_name = "PDFBatchMetadataEditor.msi"

[tool.cxfreeze.bdist_msi.data]
Shortcut = [
    [
        "DesktopShortcut",
        "DesktopFolder",
        "PDF Batch Metadata Editor",
        "TARGETDIR",
        "[TARGETDIR]PDFBatchMetadataEditor.exe",
        "",
        "Batch edit Title, Author, and Initial View for PDF files.",
        0,
        "",
        0,
        0,
        "TARGETDIR",
    ],
    [
        "ProgramMenuShortcut",
        "ProgramMenuFolder",
        "PDF Batch Metadata Editor",
        "TARGETDIR",
        "[TARGETDIR]PDFBatchMetadataEditor.exe",
        "",
        "Batch edit Title, Author, and Initial View for PDF files.",
        0,
        "",
        0,
        0,
        "TARGETDIR",
    ],
]
